--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -141,7 +141,7 @@
             <div class="row text-center">
                  <div class="col-xl-8 col-xl-offset-2 col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
 					<p><h3><a href="{{registration_link}}" target="_blank">Registration for the {{title}} is now open!</a></h3></p>
-		    <p>The {{title}} is an official satellite event of the <a href="http://events.brainhack.org/global{{year}}/" target="_blank">International Global Brainhack {{year}}</a> that is organized by
+		    <p>The {{title}} is an official satellite event of the <a href="http://brainhack.org/global{{year}}/" target="_blank">International Global Brainhack {{year}}</a> that is organized by
             {% for org in global_brainhack_organizers %}
             {{org}}
             {% endfor %}
