--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -232,7 +232,7 @@
 			    <div class="col-lg-12 text-center" >
             {% endif %}
                     <div class="col-lg-12 text-center">
-                        <a href="{{sponsor.url}}" target="_blank"><img src="{{sponsor.logo}}" class="img-responsive center-block" alt="{{sponsor.name}}" id="{{sponsor.name.replace(" ", "_")}}"></a>
+                        <a href="{{sponsor.url}}" target="_blank"><img src="{{sponsor.logo}}" class="img-responsive center-block" alt="{{sponsor.name}}" width="400" id="{{sponsor.name.replace(" ", "_")}}"></a>
                     </div>
 
             {% if loop.index % 2 %}
