--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -233,7 +233,7 @@ hr.small {
     height: 400px;
     color: #000;
     font-family: 'Comfortaa', cursive;
-    background: url() no-repeat center center scroll;
+    background: url(https://upload.wikimedia.org/wikipedia/commons/c/ca/Uof_Oregon_logo.png) no-repeat center center scroll;
     -webkit-background-size: auto;
     -moz-background-size: auto;
     background-size: auto;
