updated schedule and registration link

--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -161,7 +161,7 @@
         <div class="container">
 			<div class="row text-center top30">
 				<div class="col-md-2 col-md-offset-5 col-xs-8 col-xs-offset-2 text-dark">
-				    <h3>Tentative Schedule</h3>
+				    <h3>Schedule</h3>
 			    </div>
 			</div>
 			<div class="row top30">
